--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.cdnfonts.com/css/sofia-pro');
+@import url('https://fonts.cdnfonts.com/css/cubano');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 *{
     font-family: 'Sofia Pro', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Cubano', sans-serif;
 }
